# ideas

./: README.md
.claude/: settings.local.json
CV/: .gitignore  Fayssal_El_Mofatiche_CV_DE.docx  Fayssal_El_Mofatiche_CV_EN.docx  cv.yaml  cvserve.py  pyproject.toml
CV/cvserve/: __init__.py  bio.py  build.py  docx_builder.py  tailor.py  translate.py  utils.py
posts/linkedin/: ai-jobs-40-year-old-paper.md  ccc.md
posts/substack/: ai-jobs-40-year-old-paper.md
products/flowistic/post-trade-autopilot/: concept.md
projects/: tool-ideas.md
projects/beyondbookings/: BeyondBookings_Proposal_Flowistic.docx  effort_estimation.md  generate_proposal.py
projects/claudio/: README.md
projects/flowistic/: Gesellschafterbeschluss_Gehaltsanpassung_2026.docx  generate_beschluss.py
