[project]
name = "resumake"
version = "0.3.0"
description = "Build styled CV documents from a single YAML source"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
pdf = ["docx2pdf>=0.1.8"]
watch = ["watchdog>=4.0.0"]
all = ["resumake[ai,pdf,watch]"]

[tool.setuptools]
packages = ["resumake"]

[tool.setuptools.package-data]
resumake = ["assets/*.png", "themes/*.yaml", "templates/*.yaml"]

[project.scripts]
resumake = "resumake:app"
